# G-BigSMILES

./: .cspell.json  .flake8  .gitignore  README.md  SI.ipynb  SI.md  bigsmiles_gen.ipynb  bigsmiles_gen.md  environment.yml  g-bigsmiles.lark  pdb_play.py  play.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  coverage.yml  notebook.yml  release.yml  test.yml  trunk.yml
.trunk/: trunk.yaml
.trunk/config/: .cspell.json  .flake8  ruff.toml
.trunk/plugins/: trunk
bigsmiles/: __init__.py  __main__.py  distribution.py  parsing.py  stoachstic.py  system.py
bigsmiles_gen/: __init__.py  __main__.py  atom.py  bond.py  chem_resource.py  core.py  distribution.py  forcefield_helper.py  graph_generate.py  mixture.py  mol_gen.py  mol_prob.py  molecule.py  stoachstic.py  stochastic.py  stochastic_atom_graph.py  system.py  token.py
src/gbigsmiles/: __init__.py  __main__.py  atom.py  atom.py.bak  atom_graph.py  big_smiles.py  bond.py  chem_resource.py  core.py  distribution.py  exception.py  forcefield_helper.py  generating_graph.py  mixture.py  mol_gen.py  mol_prob.py  molecule.py  nx_rdkit_mol.py  parser.py  smiles.py  stochastic.py  stochastic_atom_graph.py  system.py  token.py  transformer.py  util.py
src/gbigsmiles/data/: ffnonbonded.itp  g-bigsmiles.lark  opls.par
tests/: conftest.py  graph_validation.json  smi.json  test_atom.py  test_bond.py  test_core.py  test_distribution.py  test_exceptions.py  test_forcefield.py  test_generating_graph.py  test_grammar.py  test_mixture.py  test_mol_prob.py  test_molecule.py  test_smiles.py  test_stochastic.py  test_system.py  test_token.py  test_util.py
