# [tool.pytest.ini_options]
# testpaths = [
#     "tests",
# ]
[build-system]
requires = ["setuptools >= 43", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bigsmiles_gen"
authors = [
  { name = "Ludwig Schneider", email = "ludwigschneider@uchicago.edu" },
]
license = { text = "GPL-3.0", files = ["LICENSE.md"] }
description = "Bigsmiles extension handling the generation of ensembles smiles strings."
requires-python = ">=3.9"
dependencies = ["scipy", "numpy", "networkx", "matplotlib"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "bigsmiles_gen._version.version" }

[tool.setuptools_scm]
write_to = "bigsmiles_gen/_version.py"
version_file = "bigsmiles_gen/_version.py"

[tool.black]
line-length = 100

[tool.coverage.run]
omit = [
  "*/__init__.py",
  "path_to_exclude/*",
  "tests/*",
  "*/_pytest/*",
  "*/more_itertools/*",
  "*/pluggy/*",
  "*/py/*",
  "*/six.py",
]

[tool.setuptools.package-data]
bigsmiles_gen = ["data/ffbonded.itp", "data/ffnonbonded.itp", "data/opls.par"]
