# Uncomment if needed
# [tool.pytest.ini_options]
# testpaths = [
#     "tests",
# ]

[build-system]
requires = ["setuptools>=43", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gbigsmiles"
description = "Bigsmiles extension handling the generation of ensemble smiles strings."
authors = [
  { name = "Ludwig Schneider", email = "ludwigschneider@uchicago.edu" },
]
license = { text = "GPL-3.0", files = ["LICENSE.md"] }
requires-python = ">=3.10"
dependencies = [
  "scipy",
  "numpy",
  "networkx",
  "matplotlib",
  "pytest",
  "rdkit",
  "lark",
  "typing_extensions",
]
dynamic = ["version"]
readme = "README.md"

[tool.setuptools.dynamic]
version = { attr = "gbigsmiles._version.version" }

[tool.setuptools_scm]
write_to = "src/gbigsmiles/_version.py"
version_file = "src/gbigsmiles/_version.py"

[tool.black]
line-length = 196

[tool.coverage.run]
omit = [
  "*/__init__.py",
  "path_to_exclude/*",
  "tests/*",
  "*/_pytest/*",
  "*/more_itertools/*",
  "*/pluggy/*",
  "*/py/*",
  "*/six.py",
]

[tool.setuptools.package-data]
gbigsmiles = [
  "data/ffbonded.itp",
  "data/ffnonbonded.itp",
  "data/opls.par",
  "data/g-bigsmiles.lark",
]
