[metadata]
name = bigsmiles_gen
author = Ludwig Schneider
authro_email = ludwigschneider@uchicago.edu
destription = Bigsmiles extension handling the generation of ensembles smiles strings.
long_description = file: README.md
long_description_content_type = text/x-rst
license_files = LICENSE.md
license = GPL-3.0

[options]
packages = find:
python_requires = >=3.9
# install_requires = cython; 


# [build_sphinx]
# all-files = 1
# source-dir = docs/source
# build-dir = docs/build
# warning-is-error = 1
